[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
godot = "0.2.1"
inklings = "0.1.0"
tokio = { version = "1", features = ["macros"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["cdylib"]
